# ai-learning

./: .gitignore  README.md
day01/: 01_basics.py  02_cpp_to_python.py
day02/: 01_oop_basics.py  02_document_class.py  test.txt
day03/: 01_types_and_data.py  02_document_metadata.py  sample.csv  sample.json
day04/: 01_async_basics.py  02_async_fetch.py
day05/: 01_project_and_imports.py  02_poetry_project.py
day05/demo01/: main.py  pyproject.toml
day05/demo01/src/: greeter.py
day05/demo01/tests/: test_greeter.py
day05/my_project/: pyproject.toml
day05/my_project/src/: __init__.py  config.py  greeter.py
day05/my_project/tests/: __init__.py
day06/: 01_file_scanner.py  02_async_download.py  files_metadata.json
day06/test_docs/: readme.md  产品手册.txt  报告.txt  需求文档.txt
day08/: 01_tokens.py
day09/: 01_api_first_call.py
day10/: 01_embeddings.py
day11/: 01_transformer.py
day12/: 01_prompt_techniques.py  02_structured_extraction.py
day13/: 01_function_calling.py
day14/: 01_week2_review.py
day15/: 01_rag_overview.py  setup_test_docs.py
day15/test_docs/: 产品说明.txt  员工信息.csv  需求文档.docx
day16/: 01_chunking.py
day17/: 01_embedding_pipeline.py  02_rag_pipeline.py
day18/: 01_vector_db.py
day19/: 01_handcraft_rag.py  02_handcraft_rag_complete.py
day20/: 01_retrieval_optimization.py
day22/: 01_langchain_abstractions.py
day23/: 01_langchain_rag.py
day24/: 01_llamaindex.py
day25/: 01_advanced_rag.py
day26/: 01_ragas_evaluation.py
day27/: 01_knowledge_base.py
